<resources>
    <string name="app_name">Green rover</string>
    <string name="logo">logo</string>
    <string name="splash_bottom">splash bottom</string>
    <string name="login_pic">login_pic</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_with_google">login with google</string>
    <string name="or">OR</string>
    <string name="lock_image">lock image</string>
    <string name="user_img">user img</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="email_address">Email Address</string>
    <string name="address_img">address_img</string>
    <string name="email_img">email_img</string>
    <string name="phone_img">phone_img</string>
    <string name="phone_number">Phone Number</string>
    <string name="back_to_login">back to login</string>
    <string name="username">Username</string>
    <string name="pass123">pass123</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="create_account">Create Account</string>
    <string name="john">Mr John</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="doe">Doe</string>
    <string name="_123_street">123 Street</string>
    <string name="xx0_0xx">XX0 0XX</string>
    <string name="user_app_com">User@App.com</string>
    <string name="user_name">JohnDoe01</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="logout">logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <string name="weekly_n_goal">Weekly\n Goal</string>
    <string name="usefull_tips">Usefull Tips</string>
    <string name="list_pic">list pic</string>
    <string name="update">Update</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no_data_for_this_week">No Data For this Week</string>
    <string name="step_1_gather_plastic_items">Step 1: Gather Plastic Items</string>
    <string name="step_1">Collect plastic items from around your home, including bottles, containers, and packaging made from various types of plastic.</string>
    <string name="step_2">Look for the recycling symbols on the bottom of each plastic item. Plastics are categorized into seven types, with each marked by a recycling symbol and a number.</string>
    <string name="step3_1">Sort the plastic items into two separate piles based on their recycling symbols:</string>
    <string name="step3_2">1) Easy to Recycle: Types 1, 2 and 5. \n 2) Moderately Hard to Recycle: Types 3 , 4, 6 and 7.</string>
    <string name="step3_4">Some plastic items may NOT have a symbol and may have labels or packaging indicating the type of plastic used.</string>
    <string name="step3_3">Important</string>
    <string name="step4">Rinse out any residue or contaminants from the plastic items to prepare them for recycling. Remove caps, lids, and any non-plastic components as necessary.</string>
    <string name="submit">submit</string>
    <string name="step_5_submit_what_you_have">Step 6: submit What You have</string>
    <string name="step_4_check_for_contaminants">Step 4: Check For Contaminants</string>
    <string name="step_3_separate_plastics_into_groups">Step 3: Separate Plastics into Groups</string>
    <string name="step_2_check_recycling_symbols">Step 2: Check Recycling Symbols</string>
    <string name="how_to_sort_your_plastic_waste">How to sort your plastic waste?</string>
    <string name="back_button">back button</string>
    <string name="calculate_how_much_plastic_waste_you_have">Calculate how much plastic waste you have</string>
    <string name="do_you_wish_to_enter_the_weight_of_the_plastic_waste_or_the_quantity">Do you wish to enter the weight of the plastic waste or the quantity?</string>
    <string name="weight">Weight</string>
    <string name="quantiry">Quantiry</string>
    <string name="select_an_option_above">Select an option above</string>
    <string name="enter_the_weight_of_the_type_1_plastics">Enter the weight of the first pile with Type 1,2 and 5</string>
    <string name="_0_565">0.565</string>
    <string name="kg">KG</string>
    <string name="start_now">Start Now</string>
    <string name="step_5_weigh_the_plastic">Step 5: weigh the plastic</string>
    <string name="step5">For each pile gather all of the items and weight them together. Remember to ignore the weight of the container you use to weigh the items.</string>
    <string name="enter_the_weight_of_the_plastics">Enter the weight of the plastics</string>
    <string name="enter_the_weight_of_the_second_pile_with_type_3_4_6_and_7">Enter the weight of the second pile with Type 3,4 6, and 7</string>
    <string name="holding_trophy">holding trophy</string>
</resources>