<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="10dp"
        android:background="@color/main_color"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/infobackbutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />


        <TextView
            android:id="@+id/textView7"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:layout_weight="1"
            android:background="@color/main_color"

            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="34sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin50">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"

            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:gravity="center"
                android:text="@string/how_to_sort_your_plastic_waste"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dark_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:elevation="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_1_gather_plastic_items"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/list_pic"
                    android:padding="@dimen/margin10"

                    android:src="@drawable/plasticdomestic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin20"
                    android:gravity="center"
                    android:text="@string/step_1"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_2_check_recycling_symbols"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/list_pic"
                    android:src="@drawable/recyclingcodes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:layout_marginBottom="@dimen/margin10"
                    android:gravity="center"
                    android:text="@string/step_2"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_3_separate_plastics_into_groups"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/list_pic"
                    android:paddingTop="@dimen/margin10"

                    android:src="@drawable/plasticrecycling" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"

                    android:gravity="center"
                    android:text="@string/step3_1"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/margin10"
                    android:gravity="center"
                    android:text="@string/step3_2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step3_3"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:layout_marginBottom="@dimen/margin10"
                    android:gravity="center"
                    android:text="@string/step3_4"
                    android:textColor="@color/red"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_4_check_for_contaminants"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/list_pic"
                    android:padding="@dimen/margin10"
                    android:src="@drawable/contaminants" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:layout_marginBottom="@dimen/margin10"
                    android:gravity="center"
                    android:text="@string/step4"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_5_weigh_the_plastic"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/list_pic"
                    android:padding="@dimen/margin10"
                    android:src="@drawable/scale" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:layout_marginBottom="@dimen/margin10"
                    android:gravity="center"
                    android:text="@string/step5"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/step_5_submit_what_you_have"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/submit_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin20"
                    android:text="@string/start_now" />


            </LinearLayout>





        </LinearLayout>

    </ScrollView>


</LinearLayout>