<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_color_dark"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="@string/message"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msg_box_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20"
        android:gravity="center"
        android:text="Are you sure you want to logout?"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/msg_box_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20"
        android:text="@string/close" />

    <Button
        android:id="@+id/logout_box_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin20"
        android:layout_marginEnd="@dimen/margin20"
        android:layout_marginBottom="@dimen/margin20"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textStyle="bold" />

</LinearLayout>