<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".logoutFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center|top"
        android:background="@color/main_color"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin40"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="@dimen/margin40"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/msg_box_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textSize="24sp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20"
            android:text="@string/logout" />
    </LinearLayout>
</FrameLayout>